fixed list overflow

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -42,8 +42,8 @@
 // }
 
 .app-container{
-    height: 70vh;
-    margin-top: 10%;
+    height: 94vh;
+    margin-top: 2.5%;
     width: min(100% - 25px, 500px);
     margin-inline: auto;
     background-color: rgb(115, 134, 128);
